--- a/style.css
+++ b/style.css
@@ -1,3 +1,6 @@
+/* https://youtu.be/tcskp-ncN0I?t=3016 */
+
+
 @import url('https://fonts.googleapis.com/css2?family=Inconsolata:wght@200;500;900&family=Roboto:wght@300&display=swap');
  
 *{margin: 0;
@@ -16,6 +19,7 @@
 .topnav{
     position: fixed;
     width:100%;
+    z-index: 999;
     padding: 30px 0;
     font-family: 'Inconsolata' ,sans-serif;
     transition: all 0.3s ease;
@@ -23,7 +27,7 @@
 }
 .topnav.sticky{
     padding: 15px 0;
-    background: rgb(232, 78, 78);
+    background: #e84e4e;
 }
 .topnav .max-width{
     display: flex;
@@ -96,19 +100,153 @@
     color:rgb(232, 78, 78);
     font-weight: 500;
 }
+.home .home-content a{
+    display: inline-block;
+    background: #e84e4e;
+    color: #fff;
+    font-size: 25px;
+    padding: 12px 35px;
+    margin-top: 20px;
+    border-radius: 10px;
+    border: 2px solid #e84e4e;
+    transition: all 0.3s ease;
+}
+.home .home-content a:hover{
+    color: #fff;
+    background: none;
+}
+
+/* similar content styling */
+
+
+
+
+
+/* about styling*/
+section{
+    padding: 100px 0;
+}
+.about, .skills{
+    font-family: Roboto;
+}
+section .title{
+    position: relative;
+    text-align: center;
+    font-size: 40px;
+    font-weight: 500;
+    margin-bottom: 60px;
+    padding-bottom: 20px;
+    font-family: 'Roboto' ;
+}
+section .title::before{
+    content: "";
+    position: absolute;
+    bottom: 0px;
+    left: 50%;
+    width: 180px;
+    height: 3px;
+    background: #111;
+    transform: translateX(-50%);
+}
+section .title::after{
+    position: absolute;
+    bottom: -12px;
+    left: 50%;
+    font-size: 20px;
+    color: #e84e4e;
+    padding: 5px;
+    background: #fff;
+    transform: translateX(-50%);
+}
+.about .title::after{
+    content: "who i am";
+}
+.about .about-content {
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: space-between;
+}
+.about .about-content .left{
+    width: 45%;
+
+}
+.about .about-content .left img{
+    height: 400px;
+    width: 400px;
+    object-fit: cover;
+    border-radius: 8px;
+}
+
+.about .about-content .right{
+    width: 55%;
+     
+}
+.about .about-content .right .text{
+    font-size: 25px; 
+    font-weight: 600;
+    margin-bottom: 10px;
+}
+.about .about-content .right .text span{
+    color:rgb(232, 78, 78);
+}
+.about .about-content .right p{
+    text-align: justify;
+
+}
+.about .about-content .right a{
+    display: inline-block;
+    background: #e84e4e;
+    color: #fff;
+    font-size: 20px;
+    font-weight: 600;
+    padding: 10px 30px;
+    margin-top: 20px;
+    border-radius: 10px;
+    border: 2px solid #e84e4e;
+    transition: all 0.3s ease;    
+}
+.about .about-content .right a:hover{
+    color:#e84e4e;
+    background: none;
+
+}
+
+/* Skills styling*/
+.skills{
+
+}
 
 /*responsive media query*/
-@media (max-width: 947px){
-    
+@media (max-width: 1330px){
+    .home.max-width{
+        margin-left: 0px;
+    }
+}
+@media (max-width: 1104px){
+    .about .about-content .left img{
+        height: 350px;
+        width: 350px;
+    }
+}
+
+@media (max-width: 991px){
     .max-width{
         padding: 0 50px;
     }
+}
+
+@media (max-width: 947px){
+    
+    
     .menu-btn{
         display: block;
         z-index: 999;
         
     }
-    
+    .menu-btn i.active:before{
+        content: "\f00d"
+    }
     .topnav .menu{
         position: fixed;
         height: 100vh;
@@ -130,5 +268,65 @@
         display: inline-block;
         margin: 20px 0;
         font-size: 25px;
+    }
+    .home .home-content .text-2{
+        font-size: 70px;
+    }
+    .home .home-content .text-3{
+        font-size: 35px;
+    }
+}
+@media (max-width: 690px){
+    .max-width{
+        padding: 0 23px;
+    }
+    .home .home-content .text-2{
+        font-size: 60px;
+    }
+    .home .home-content .text-3{
+        font-size: 32px;
+    }
+    .home .home-content .a{
+        font-size: 23px;
+        padding: 10px 30px;
+    }
+    .max-width{
+        max-width: 800px;
+    }
+    .about .about-content .column{
+        width: 100%;
+    }
+    .about .about-content .left{
+        display: flex;
+        justify-content: center;
+        margin: 0 auto 60px;
+    }
+    .about .about-content .right{
+        flex: 100%;
+    }
+    
+}
+@media (max-width: 690px){
+    .max-width{
+        padding: 0 23px;
+    }
+    .home .home-content .text-2{
+        font-size: 60px;
+    }
+    .home .home-content .text-3{
+        font-size: 32px;
+    }
+    .home .home-content .a{
+        font-size: 20px;
+        padding: 9px 25px;
+    }
+}
+
+@media (max-width: 500px){
+    .home .home-content .text-2{
+        font-size: 50px;
+    }
+    .home .home-content .text-3{
+        font-size: 27px;
     }
 }
